--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -21,6 +21,27 @@
         height: 100px;
     }
 
+    .row
+    {
+        width: 100%;
+    }
+
+    .container
+    {
+        width : 100%;
+    }
+
+    .col
+    {
+        padding: 0px;
+    }
+
+    *
+    {
+        margin: 0px;
+        padding: 0px;
+    }
+
 
     </style>
     <div class="container">
@@ -68,7 +89,7 @@
             <br>
                 <div class="row" style="border-bottom: 3px solid lightgray; padding: 0px">
                     <div class="col s6 m6 l6" id="popularLinksDiv">
-                                    <div class="header center center-align" id="popularLinksTab" style="padding: 0px;; cursor:pointer;">
+                                    <div class="header center center-align" id="popularLinksTab" style="padding: 0px; cursor:pointer;">
                         <h5 style="padding: 0px; cursor: pointer" id="popularLinksHeading">Popular Links</h5><br>
                     </div>
                     </div>
