--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -13,6 +13,7 @@
   </title>
   <script src = "/static/materialize/js/jquery.js"></script>
   <script src = '/static/materialize/js/materialize.js'> </script>
+  <script src = 'https://cdnjs.cloudflare.com/ajax/libs/showdown/1.7.1/showdown.min.js'></script>
   <link type="text/css" rel="stylesheet" href="/static/materialize/css/basic.css"  media="screen,projection"/>
   {% if not request.user.is_authenticated %}
   <!-- required for social login buttons -->
