Changed collapsible style

--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -24,7 +24,7 @@
     </style>
 
     <div style="width:80%; margin:auto;">
-      <ul class="collapsible popout" data-collapsible="accordion">
+      <ul class="collapsible popout" data-collapsible="expandable">
       {% for book in view_books %}
         <li>
           {% if forloop.counter|add:0|divisibleby:3 %}
