--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -8,79 +8,86 @@
     <style>
         .card1
         {
-            height : 300px;
+            height : 320px;
         }
         .description
         {
             overflow: hidden;
-            max-height : 70px;
+            max-height : 65px;
         }
-        .collapsiblecards{
-            display:inline-block;
-            margin-left: 5px; 
-            margin-right: 5px;
-            width:32%;
+        .BooksP
+        {
+            overflow: hidden;
+            height : 37px;
+        }
+
+        .TagsP
+        {
+            overflow: hidden;
+            height : 37px;
         }
     </style>
+    <div class="container">
+        <div class="row">
 
-    <div style="width:80%; margin:auto;">
-      <ul class="collapsible popout" data-collapsible="expandable">
-      {% for book in view_books %}
-        <li>
-          {% if forloop.counter|add:0|divisibleby:3 %}
-            <div class="collapsible-header" style="background-color: #59f6ff;">
-          {% endif %} 
-          {% if forloop.counter|add:1|divisibleby:3 %}
-            <div class="collapsible-header" style="background-color: #90ff60;">
-          {% endif %} 
-          {% if forloop.counter|add:2|divisibleby:3 %}
-            <div class="collapsible-header" style="background-color: #ffec49;">
-          {% endif %}<i class="material-icons">whatshot</i>{{book.title}}</div>
-            <div class="collapsible-body">
-                {% for link in book.link_set.all %}
-                  <span>
-                  <div class="collapsiblecards">
-                    <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
-                  <div class="card-stacked">
-                      <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
-                      <div class="card-title center"><h5>{{link.title}}</h5></div>
-                      <div class="card-content" id="{{ link.id }}">
-                      <p class="description">{{ link.description }}</p>
-                      <p>Books:
-                        {% for book in link.books.all %}
-                            <span class="chip">
-                          <strong><a href = "/../book/{{book.id}}/">{{book.title}}</a></strong>
-                            </span>
-                        {% endfor %}
-                      </p>
-                      <p>Tags:
-                        {% for tag in link.tags.all %}
-                            <span class="chip">
-                          <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
-                            </span>
-                        {% endfor %}
-                      </p>
-                      <p>{{link.comment_set.count}} comment(s)</p>
-                    </div>
-                      </div>
-                    <div class="card-action">
-                      <a href="{{link.url}}" target="_blank">Visit link</a>
-                      {% if request.user == link.user %}
-                        <a href="/link/{{link.id}}/edit">Edit</a>
+            <div class="col s12 m12 l12">
+                <ul class="collapsible popout" data-collapsible="expandable">
+                    {% for book in view_books %}
+                    <li>
+                      {% if forloop.counter|add:0|divisibleby:3 %}
+                        <div class="collapsible-header blue-grey white-text" >
                       {% endif %}
-                    </div>
-                  </div>
-               </div>
-                </div>
-                  </span>
-                {% endfor %}
-            </div>
-        </li>
-      {% endfor %}
+                      {% if forloop.counter|add:1|divisibleby:3 %}
+                        <div class="collapsible-header blue-grey white-text" >
+                      {% endif %}
+                      {% if forloop.counter|add:2|divisibleby:3 %}
+                        <div class="collapsible-header blue-grey white-text">
+                      {% endif %}<i class="material-icons">whatshot</i>{{book.title}}</div>
+                        <div class="collapsible-body">
+                            <div class="row" style="padding: 2%">
+                            {% for link in book.link_set.all %}
+                                <div class="col s12 m12 l6">
+                                <div class="card card1 horizontal hoverable blue-grey white-text lighten-1">
+                              <div class="card-stacked">
+                                  <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
+                                  <div class="card-title center"><h5>{{link.title}}</h5></div>
+                                  <div class="card-content" id="{{ link.id }}">
+                                  <p class="description">{{ link.description }}</p>
+                                  <p class="BooksP">Books:
+                                    {% for book in link.books.all %}
+                                        <span class="chip">
+                                      <strong><a href = "/../book/{{book.id}}/">{{book.title}}</a></strong>
+                                        </span>
+                                    {% endfor %}
+                                  </p>
+                                  <p class="TagsP">Tags:
+                                    {% for tag in link.tags.all %}
+                                        <span class="chip">
+                                      <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
+                                        </span>
+                                    {% endfor %}
+                                  </p>
+                                  <p>{{link.comment_set.count}} comment(s)</p>
+                                </div>
+                                  </div>
+                                <div class="card-action">
+                                  <a href="{{link.url}}" target="_blank">Visit link</a>
+                                  {% if request.user == link.user %}
+                                    <a href="/link/{{link.id}}/edit">Edit</a>
+                                  {% endif %}
+                                </div>
+                              </div>
+                           </div>
+                                </div>
+                            {% endfor %}
+                            </div>
+                        </div>
+                    </li>
+                  {% endfor %}
       </ul>
-        
-</div>
-   
+            </div>
+        </div>
+    </div>
     <script>
 
         $(function () {
