--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -8,12 +8,23 @@
     <style>
         .card1
         {
-            height : 300px;
+            height : 320px;
         }
         .description
         {
             overflow: hidden;
-            max-height : 70px;
+            max-height : 65px;
+        }
+        .BooksP
+        {
+            overflow: hidden;
+            height : 37px;
+        }
+
+        .TagsP
+        {
+            overflow: hidden;
+            height : 37px;
         }
     </style>
     <div class = "container">
@@ -22,24 +33,23 @@
         </div>
         <div class="row">
             {% for link in book %}
-                <div class="col s12 m4 l4">
+                <div class="col s12 m12 l4">
                     <div class="row">
                         <div class="col s12 m12 l12">
-
                 <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
                       <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
                       <div class="card-title center"><h5>{{link.title}}</h5></div>
                       <div class="card-content" id="{{ link.id }}">
                       <p class="description">{{ link.description }}</p>
-                      <p>Books:
+                      <p class="BooksP">Books:
                         {% for book in link.books.all %}
                             <span class="chip">
                           <strong><a href = "/../book/{{book.id}}/">{{book.title}}</a></strong>
                             </span>
                         {% endfor %}
                       </p>
-                      <p>Tags:
+                      <p class="TagsP">Tags:
                         {% for tag in link.tags.all %}
                             <span class="chip">
                           <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
