--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles i18n %}
+{% load notifications_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,6 +21,8 @@
   <link rel="stylesheet" type="text/css" href="/static/materialize/css/override_buttons.css">
   <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   {% endif %}
+  <script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
+  {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
   <!-- <link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> -->
   {% block head %}
   {% endblock %}
@@ -48,7 +51,7 @@
                 <li><a class="btn-floating  waves-effect waves-light green" href="#modal2" title="Create new book" ><i class="material-icons">queue</i></a></li>
                 <li><a class="btn-floating waves-effect waves-light green" href="#modal3" title="Create new link" ><i class="material-icons">note_add</i></a>
                 </li>
-               <li><a class='dropdown-button btn-floating waves-effect waves-light blue' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false"><i class="material-icons">notifications</i></a></li>
+               <li><a class='dropdown-button btn-floating waves-effect waves-light blue' data-beloworigin="true" href='#!' data-activates='NOTIFS' id="MYNOTIF" data-constrainwidth="false"><i id = "NOTIF_ICON" class="material-icons">notifications</i></a></li>
                <li><a href="/logout/?next={{request.path}}">Logout</a></li>
                {% endif %}
 
@@ -226,7 +229,7 @@
 </div>
 </div>
 
-
+{% live_notify_list %}
 {% block body %}
 
 {% endblock body %}
@@ -287,6 +290,7 @@
                    }
 
                         str = '';
+                        console.log("{% live_notify_list %}".split('<li>'));
                         for( i = 0; i < data['notifs'].length;i++){
                             str += ("<li><a href='/link/" + data['notifs'][i]['id'] + "/'>"
                                     + "<img src=" + data['notifs'][i]['pic'] + " height=20px width=20px/>&nbsp" 
@@ -297,6 +301,8 @@
                         if(str === '')
                         {
                             str = '<li>No new notifications</li>'
+                            notif_master.removeClass('blue');
+                            notif_master.addClass('green');
                         }
 
                         // bind new notifications
@@ -317,7 +323,7 @@
             books.material_select();
             notifs.material_select(true);
             notif_master.dropdown();
-            window.setInterval(LoadNotifications, 5000, 0);
+            window.setInterval(LoadNotifications, 10000, 0);
         {% endif %}
 
         // to load user profile url on click 
@@ -333,6 +339,17 @@
         $('#DESCRIPTION').trigger('autoresize');
         $('.chips').material_chip();
         $('#TITLE, #DESCRIPTION').characterCounter();
+    });
+
+    $("#MYNOTIF").click(function () {
+        var notif_master = $("#MYNOTIF");
+        notif_master.removeClass('blue');
+        notif_master.addClass('green');
+        $ajax({
+            url: '/mark_as_read/',
+            type: 'post',
+
+        });
     });
    </script>
 </body>
